--- a/admin/config.yml
+++ b/admin/config.yml
@@ -45,12 +45,12 @@ collections:
                   name: "featuredImage",
                   widget: "image",
                 }
-  - label: "PTII"
+  - label: "Portugal II"
     name: "PTII"
     editor:
       preview: false
     files:
-      - label: "ProfilePTII"
+      - label: "Portugal II"
         name: "profileptii"
         file: "_data/ptii.yaml"
         fields:
@@ -65,16 +65,16 @@ collections:
                   name: "featuredImage",
                   widget: "image",
                 }
-  - label: "PTIII"
+  - label: "Portugal III"
     name: "PTIII"
     editor:
       preview: false
     files:
-      - label: "ProfilePTIII"
+      - label: "Portugal III"
         name: "profileptiii"
         file: "_data/ptiii.yaml"
         fields:
-          - label: Profile
+          - label: Jogador
             name: profileptiii
             widget: list
             collapsed: true
@@ -91,7 +91,7 @@ collections:
       preview: false
     files:
       - label: "Academia"
-        name: "academia"
+        name: "profileacademia"
         file: "_data/academia.yaml"
         fields:
           - label: Jogador
