--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -1,101 +1,97 @@
 profile:
-  - title: 1 PT Biclas
-    featuredImage: /images/uploads/humm.png
+  - title: 1 SN Carlos
+    featuredImage: /images/uploads/01.png
   - featuredImage: /images/uploads/01.png
-    title: 2 PT Antrax
+    title: 2 PT Blaze
   - featuredImage: /images/uploads/02.png
-    title: 3 SN Carlos
+    title: 3 PT Antrax
   - title: 4 VittorioGPYT
-    featuredImage: /images/uploads/humm.png
-  - title: 5 Líder
-    featuredImage: /images/uploads/lider.png
-  - title: 6 PT Jogador
-    featuredImage: /images/uploads/02.png
-  - title: 7 Jogador
-    featuredImage: /images/uploads/02.png
-  - title: 8 SN Murdock
-    featuredImage: /images/uploads/humm.png
-  - title: 9 PT Jezandapus
-    featuredImage: /images/uploads/02.png
-  - title: 10 Jogador
     featuredImage: /images/uploads/01.png
-  - title: 11 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 12 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 13 Jogador
+  - title: 5 Sn Murdock
     featuredImage: /images/uploads/01.png
-  - title: 14 PT Jezandapus
-    featuredImage: /images/uploads/humm.png
-  - title: 15 Jogador
+  - title: 6 PT Mike
     featuredImage: /images/uploads/02.png
-  - title: 16 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 17 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 18 Jogador
+  - title: 7 PT Reforma
+    featuredImage: /images/uploads/reforma.png
+  - title: 8 PT RR
     featuredImage: /images/uploads/01.png
-  - title: 19 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 20 Jogador
+  - title: 9 PT Kazaka
+    featuredImage: /images/uploads/02.png
+  - title: 10 SN MLOPES
     featuredImage: /images/uploads/01.png
-  - title: 21 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 22 Líder
-    featuredImage: /images/uploads/lider.png
-  - title: 23 Jogador
+  - title: 11 PT Maximus®
     featuredImage: /images/uploads/01.png
-  - title: 24 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 25 Jogador
+  - title: 12 SN ALLAN
     featuredImage: /images/uploads/01.png
-  - title: 26 Jogador
+  - title: 13 SN TELL
+    featuredImage: /images/uploads/01.png
+  - title: 14 PT Mykarr
+    featuredImage: /images/uploads/01.png
+  - title: 15 SN Guijona
     featuredImage: /images/uploads/02.png
-  - title: 27 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 28 Líder
-    featuredImage: /images/uploads/lider1.png
-  - title: 29 Jogador
+  - title: 16 SN CHINA
+    featuredImage: /images/uploads/01.png
+  - title: 17 PT Titana
+    featuredImage: /images/uploads/01.png
+  - title: 18 SN Klauck
+    featuredImage: /images/uploads/01.png
+  - title: 19 SN Irenno
+    featuredImage: /images/uploads/01.png
+  - title: 20 PT M@risa
+    featuredImage: /images/uploads/01.png
+  - title: 21 SN ACQUA
+    featuredImage: /images/uploads/01.png
+  - title: 22 SN AS
+    featuredImage: /images/uploads/01.png
+  - title: 23 SN Ander
+    featuredImage: /images/uploads/01.png
+  - title: 24 SN Betinho
+    featuredImage: /images/uploads/01.png
+  - title: 25 SN Marcelo
+    featuredImage: /images/uploads/01.png
+  - title: 26 SN Biil
     featuredImage: /images/uploads/02.png
-  - title: 30 Jogador
+  - title: 27 Samuka
+    featuredImage: /images/uploads/01.png
+  - title: 28 PT Jezandapuss
+    featuredImage: /images/uploads/01.png
+  - title: 29 PT N8N
     featuredImage: /images/uploads/02.png
-  - title: 31 Jogador
+  - title: 30 SN LukBagart
     featuredImage: /images/uploads/02.png
-  - title: 32 Jogador
+  - title: 31 PT FT1
     featuredImage: /images/uploads/02.png
-  - title: 33 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 34 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 35 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 36 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 37 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 38 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 39 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 40 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 41 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 42 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 43 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 44 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 45 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 46 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 47 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 48 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 49 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 50 Jogador
-    featuredImage: /images/uploads/humm.png
+  - title: 32 Kauan(WG)
+    featuredImage: /images/uploads/02.png
+  - title: 33 SN Sieg
+    featuredImage: /images/uploads/01.png
+  - title: 34 PT BM®
+    featuredImage: /images/uploads/01.png
+  - title: 35 SN Júlio
+    featuredImage: /images/uploads/01.png
+  - title: 36 HAN SOLO
+    featuredImage: /images/uploads/01.png
+  - title: 37 PT Zeto
+    featuredImage: /images/uploads/01.png
+  - title: 38 PT Pedro
+    featuredImage: /images/uploads/01.png
+  - title: 39 PT MrWeed
+    featuredImage: /images/uploads/01.png
+  - title: 40 SN Rodrigo
+    featuredImage: /images/uploads/01.png
+  - title: 41 PT Biclas
+    featuredImage: /images/uploads/biclas.png
+  - title: 42 SN Diego
+    featuredImage: /images/uploads/01.png
+  - title: 43 PT SimaoSpeed
+    featuredImage: /images/uploads/01.png
+  - title: 44 RS kingito
+    featuredImage: /images/uploads/01.png
+  - title: 45 PT Papuça
+    featuredImage: /images/uploads/01.png
+  - title: 46 SN A.S.A.
+    featuredImage: /images/uploads/01.png
+  - title: 47 PT Pat1tuh
+    featuredImage: /images/uploads/01.png
+  - title: 48 mivacotwitch
+    featuredImage: /images/uploads/01.png
