--- a/_data/pti.yaml
+++ b/_data/pti.yaml
@@ -1,101 +1,99 @@
 profilepti:
-  - title: 1 PT Biclas
-    featuredImage: /images/uploads/humm.png
+  - title: 1 Casanova
+    featuredImage: /images/uploads/01.png
   - featuredImage: /images/uploads/01.png
-    title: 2 PT Antrax
-  - featuredImage: /images/uploads/02.png
-    title: 3 SN Carlos
-  - title: 4 VittorioGPYT
-    featuredImage: /images/uploads/humm.png
-  - title: 5 Líder
+    title: 2 A. Santos
+  - featuredImage: /images/uploads/lider.png
+    title: 3 Taranto
+  - title: 4 SlashJr™
+    featuredImage: /images/uploads/01.png
+  - title: 5 AlcobiaV
+    featuredImage: /images/uploads/01.png
+  - title: 6 RS|M4ster
+    featuredImage: /images/uploads/02.png
+  - title: 7 Mykarr2
+    featuredImage: /images/uploads/02.png
+  - title: 8 BMW
+    featuredImage: /images/uploads/01.png
+  - title: 9 Malico
+    featuredImage: /images/uploads/02.png
+  - title: 10 ZaMaNoO
+    featuredImage: /images/uploads/01.png
+  - title: 11 Dvalin
+    featuredImage: /images/uploads/01.png
+  - title: 12 Joselito
+    featuredImage: /images/uploads/01.png
+  - title: 13 Bruno
+    featuredImage: /images/uploads/01.png
+  - title: 14 Rafa­­™$
+    featuredImage: /images/uploads/01.png
+  - title: 15 Hugo
+    featuredImage: /images/uploads/02.png
+  - title: 16 PR LelouchYT
+    featuredImage: /images/uploads/01.png
+  - title: 17 Jorge
+    featuredImage: /images/uploads/01.png
+  - title: 18 Shisui
+    featuredImage: /images/uploads/01.png
+  - title: 19 Freddy
+    featuredImage: /images/uploads/01.png
+  - title: 20 Canada
+    featuredImage: /images/uploads/01.png
+  - title: 21 nugget
+    featuredImage: /images/uploads/01.png
+  - title: 22 TZ
+    featuredImage: /images/uploads/01.png
+  - title: 23 SRT
+    featuredImage: /images/uploads/01.png
+  - title: 24 ric123
+    featuredImage: /images/uploads/01.png
+  - title: 25 Sargento HS
+    featuredImage: /images/uploads/01.png
+  - title: 26 Majo
+    featuredImage: /images/uploads/02.png
+  - title: 27 FrankW
+    featuredImage: /images/uploads/01.png
+  - title: 28 Farinhol
+    featuredImage: /images/uploads/01.png
+  - title: 29 Srbebado
+    featuredImage: /images/uploads/02.png
+  - title: 30 Raio®
     featuredImage: /images/uploads/lider.png
-  - title: 6 PT Jogador
-    featuredImage: /images/uploads/02.png
-  - title: 7 Jogador
-    featuredImage: /images/uploads/02.png
-  - title: 8 SN Murdock
-    featuredImage: /images/uploads/humm.png
-  - title: 9 PT Jezandapus
-    featuredImage: /images/uploads/02.png
-  - title: 10 Jogador
+  - title: 31 Ricardo
     featuredImage: /images/uploads/01.png
-  - title: 11 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 12 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 13 Jogador
-    featuredImage: /images/uploads/01.png
-  - title: 14 PT Jezandapus
-    featuredImage: /images/uploads/humm.png
-  - title: 15 Jogador
+  - title: 32 pmGoPro
     featuredImage: /images/uploads/02.png
-  - title: 16 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 17 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 18 Jogador
+  - title: 33 Kharthoum
     featuredImage: /images/uploads/01.png
-  - title: 19 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 20 Jogador
+  - title: 34 DaniDias
     featuredImage: /images/uploads/01.png
-  - title: 21 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 22 Líder
+  - title: 35 420
+    featuredImage: /images/uploads/01.png
+  - title: 36 JoniOne
+    featuredImage: /images/uploads/01.png
+  - title: 37 Saraivix
+    featuredImage: /images/uploads/01.png
+  - title: 38 JDias
+    featuredImage: /images/uploads/01.png
+  - title: 39 Edgar
+    featuredImage: /images/uploads/01.png
+  - title: 40 RDU
+    featuredImage: /images/uploads/01.png
+  - title: 41 Peter Pan
     featuredImage: /images/uploads/lider.png
-  - title: 23 Jogador
+  - title: 42 Lourinhã
     featuredImage: /images/uploads/01.png
-  - title: 24 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 25 Jogador
+  - title: 43 Bob (W33D)
     featuredImage: /images/uploads/01.png
-  - title: 26 Jogador
-    featuredImage: /images/uploads/02.png
-  - title: 27 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 28 Líder
-    featuredImage: /images/uploads/lider1.png
-  - title: 29 Jogador
-    featuredImage: /images/uploads/02.png
-  - title: 30 Jogador
-    featuredImage: /images/uploads/02.png
-  - title: 31 Jogador
-    featuredImage: /images/uploads/02.png
-  - title: 32 Jogador
-    featuredImage: /images/uploads/02.png
-  - title: 33 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 34 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 35 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 36 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 37 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 38 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 39 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 40 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 41 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 42 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 43 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 44 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 45 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 46 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 47 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 48 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 49 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 50 Jogador
+  - title: 44 Daniel
+    featuredImage: /images/uploads/01.png
+  - title: 45 Pull
+    featuredImage: /images/uploads/01.png
+  - title: 46 Marcio_AZR
+    featuredImage: /images/uploads/01.png
+  - title: 47 Viet24 (André)
+    featuredImage: /images/uploads/01.png
+  - title: 48 SB|Top(4)
+    featuredImage: /images/uploads/01.png
+  - title: 49 !GnI$
     featuredImage: /images/uploads/01.png
