Update Portugal I “profilepti”

--- a/_data/pti.yaml
+++ b/_data/pti.yaml
@@ -3,7 +3,7 @@ profilepti:
     featuredImage: /images/uploads/01.png
   - featuredImage: /images/uploads/01.png
     title: 2 A. Santos
-  - featuredImage: /images/uploads/lider.png
+  - featuredImage: /images/uploads/liderequipa.png
     title: 3 Taranto
   - title: 4 SlashJr™
     featuredImage: /images/uploads/01.png
@@ -58,7 +58,7 @@ profilepti:
   - title: 29 Srbebado
     featuredImage: /images/uploads/02.png
   - title: 30 Raio®
-    featuredImage: /images/uploads/lider.png
+    featuredImage: /images/uploads/liderequipa.png
   - title: 31 Ricardo
     featuredImage: /images/uploads/01.png
   - title: 32 pmGoPro
