Update Portugal I “profilepti”

--- a/_data/pti.yaml
+++ b/_data/pti.yaml
@@ -80,7 +80,7 @@ profilepti:
   - title: 40 RDU
     featuredImage: /images/uploads/01.png
   - title: 41 Peter Pan
-    featuredImage: /images/uploads/lider.png
+    featuredImage: /images/uploads/liderequipa.png
   - title: 42 Lourinhã
     featuredImage: /images/uploads/01.png
   - title: 43 Bob (W33D)
