--- a/_data/ptii.yaml
+++ b/_data/ptii.yaml
@@ -1,101 +1,99 @@
 profileptii:
-  - title: 1 PT Biclas
-    featuredImage: /images/uploads/humm.png
+  - title: 1 SlashPT
+    featuredImage: /images/uploads/01.png
+  - featuredImage: /images/uploads/liderequipa.png
+    title: 2 2 Raios
+  - title: 3 Funder (Tiago)
+    featuredImage: /images/uploads/liderequipa.png
   - featuredImage: /images/uploads/01.png
-    title: 2 PT Antrax
-  - featuredImage: /images/uploads/lider.png
-    title: 3 SN Carlos
-  - title: 4 VittorioGPYT
-    featuredImage: /images/uploads/humm.png
-  - title: 5 Líder
-    featuredImage: /images/uploads/lider.png
-  - title: 6 PT Jogador
-    featuredImage: /images/uploads/02.png
-  - title: 7 Jogador
-    featuredImage: /images/uploads/02.png
-  - title: 8 SN Murdock
-    featuredImage: /images/uploads/humm.png
-  - title: 9 PT Jezandapus
-    featuredImage: /images/uploads/02.png
-  - title: 10 Jogador
+    title: 4 Peras
+  - title: 5 XF17SUPER
     featuredImage: /images/uploads/01.png
-  - title: 11 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 12 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 13 Jogador
+  - title: 6 Eddy
     featuredImage: /images/uploads/01.png
-  - title: 14 PT Jezandapus
-    featuredImage: /images/uploads/humm.png
-  - title: 15 Jogador
+  - title: 7 MartyMcFly
     featuredImage: /images/uploads/02.png
-  - title: 16 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 17 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 18 Jogador
+  - title: 8 PowerLord
+    featuredImage: /images/uploads/02.png
+  - title: 9 LokyPedro
     featuredImage: /images/uploads/01.png
-  - title: 19 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 20 Jogador
+  - title: 10 M@nc@
+    featuredImage: /images/uploads/02.png
+  - title: 11 VW
+    featuredImage: /images/uploads/liderequipa.png
+  - title: 12 Harry Potter
     featuredImage: /images/uploads/01.png
-  - title: 21 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 22 Líder
-    featuredImage: /images/uploads/lider.png
-  - title: 23 Jogador
+  - title: 13 GAB
     featuredImage: /images/uploads/01.png
-  - title: 24 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 25 Jogador
+  - title: 14 Nuno
     featuredImage: /images/uploads/01.png
-  - title: 26 Jogador
+  - title: 15 Nivaldo
     featuredImage: /images/uploads/02.png
-  - title: 27 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 28 Líder
-    featuredImage: /images/uploads/lider1.png
-  - title: 29 Jogador
-    featuredImage: /images/uploads/02.png
-  - title: 30 Jogador
-    featuredImage: /images/uploads/02.png
-  - title: 31 Jogador
-    featuredImage: /images/uploads/02.png
-  - title: 32 Jogador
-    featuredImage: /images/uploads/02.png
-  - title: 33 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 34 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 35 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 36 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 37 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 38 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 39 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 40 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 41 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 42 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 43 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 44 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 45 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 46 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 47 Jogador
-    featuredImage: /images/uploads/lider.png
-  - title: 48 Jogador
-    featuredImage: /images/uploads/02.png
-  - title: 49 Jogador
-    featuredImage: /images/uploads/02.png
-  - title: 50 Jogador
+  - title: 16 Hvelll
     featuredImage: /images/uploads/01.png
+  - title: 17 Fenix
+    featuredImage: /images/uploads/01.png
+  - title: 18 Geno
+    featuredImage: /images/uploads/01.png
+  - title: 19 cacamaca
+    featuredImage: /images/uploads/01.png
+  - title: 20 Totti
+    featuredImage: /images/uploads/01.png
+  - title: 21 Bruno
+    featuredImage: /images/uploads/01.png
+  - title: "22 SilvaR "
+    featuredImage: /images/uploads/01.png
+  - title: 23 figas
+    featuredImage: /images/uploads/01.png
+  - title: 24 Golden
+    featuredImage: /images/uploads/01.png
+  - title: 25 seven7
+    featuredImage: /images/uploads/01.png
+  - title: 26 GoPull
+    featuredImage: /images/uploads/02.png
+  - title: 27 Jiandie
+    featuredImage: /images/uploads/01.png
+  - title: 28 PandaGirl
+    featuredImage: /images/uploads/01.png
+  - title: 29 GOC
+    featuredImage: /images/uploads/02.png
+  - title: 30 ValterSr
+    featuredImage: /images/uploads/02.png
+  - title: 31 F1-TRL
+    featuredImage: /images/uploads/02.png
+  - title: 32 Sousa
+    featuredImage: /images/uploads/02.png
+  - title: 33 Roger
+    featuredImage: /images/uploads/01.png
+  - title: 34 Ru13en
+    featuredImage: /images/uploads/01.png
+  - title: 35 Concept
+    featuredImage: /images/uploads/01.png
+  - title: 36 Barrote
+    featuredImage: /images/uploads/01.png
+  - title: 37 Oliveira
+    featuredImage: /images/uploads/01.png
+  - title: 38 Jaiminho
+    featuredImage: /images/uploads/01.png
+  - title: 39 Freixo
+    featuredImage: /images/uploads/01.png
+  - title: 40 Fustiga
+    featuredImage: /images/uploads/01.png
+  - title: 41 ACapela
+    featuredImage: /images/uploads/01.png
+  - title: 42 t.duarte
+    featuredImage: /images/uploads/01.png
+  - title: 43 Benfica 1904
+    featuredImage: /images/uploads/01.png
+  - title: 44 Motorato546
+    featuredImage: /images/uploads/01.png
+  - title: 45 Rufus
+    featuredImage: /images/uploads/01.png
+  - title: 46 Amaral
+    featuredImage: /images/uploads/01.png
+  - title: 47 RicSDias
+    featuredImage: /images/uploads/01.png
+  - title: 48 purevil75
+    featuredImage: /images/uploads/02.png
+  - title: 49 Quirgius
+    featuredImage: /images/uploads/02.png
