--- a/_data/academia.yaml
+++ b/_data/academia.yaml
@@ -1,101 +1,75 @@
 profileacademia:
-  - title: 1 PT Biclas
-    featuredImage: /images/uploads/lider.png
-  - featuredImage: /images/uploads/lider.png
-    title: 2 PT Antrax
-  - featuredImage: /images/uploads/lider.png
-    title: 3 SN Carlos
-  - title: 4 VittorioGPYT
-    featuredImage: /images/uploads/humm.png
-  - title: 5 Líder
-    featuredImage: /images/uploads/lider.png
-  - title: 6 PT Jogador
-    featuredImage: /images/uploads/02.png
-  - title: 7 Jogador
-    featuredImage: /images/uploads/02.png
-  - title: 8 SN Murdock
-    featuredImage: /images/uploads/humm.png
-  - title: 9 PT Jezandapus
-    featuredImage: /images/uploads/02.png
-  - title: 10 Jogador
+  - title: 1 Kaos
     featuredImage: /images/uploads/01.png
-  - title: 11 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 12 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 13 Jogador
+  - featuredImage: /images/uploads/01.png
+    title: 2 loc
+  - featuredImage: /images/uploads/01.png
+    title: 3 Driver
+  - title: 4 Dany05
     featuredImage: /images/uploads/01.png
-  - title: 14 PT Jezandapus
-    featuredImage: /images/uploads/humm.png
-  - title: 15 Jogador
-    featuredImage: /images/uploads/02.png
-  - title: 16 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 17 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 18 Jogador
+  - title: 5 Nunex
     featuredImage: /images/uploads/01.png
-  - title: 19 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 20 Jogador
+  - title: 6 Pacheco
+    featuredImage: /images/uploads/02.png
+  - title: 7 Jok€r 78
+    featuredImage: /images/uploads/02.png
+  - title: 8 Shini
     featuredImage: /images/uploads/01.png
-  - title: 21 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 22 Líder
-    featuredImage: /images/uploads/lider.png
-  - title: 23 Jogador
+  - title: 9 Joao P
+    featuredImage: /images/uploads/02.png
+  - title: 10 Strato156
     featuredImage: /images/uploads/01.png
-  - title: 24 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 25 Jogador
+  - title: 11 Ray 2
+    featuredImage: /images/uploads/liderequipa.png
+  - title: 12 tl
     featuredImage: /images/uploads/01.png
-  - title: 26 Jogador
+  - title: 13 Danielpac
+    featuredImage: /images/uploads/01.png
+  - title: 14 Kakashi
+    featuredImage: /images/uploads/01.png
+  - title: 15 JarJar Binks
+    featuredImage: /images/uploads/liderequipa.png
+  - title: 16 Styleish
+    featuredImage: /images/uploads/01.png
+  - title: 17 Akumajunior
+    featuredImage: /images/uploads/01.png
+  - title: 18 Rodas1904
+    featuredImage: /images/uploads/01.png
+  - title: 19 Pimbas
+    featuredImage: /images/uploads/01.png
+  - title: 20 Zé
+    featuredImage: /images/uploads/01.png
+  - title: 21 Nunm4x
+    featuredImage: /images/uploads/01.png
+  - title: 22 EvilSatan666
+    featuredImage: /images/uploads/01.png
+  - title: 23 Diogo_XY7
+    featuredImage: /images/uploads/01.png
+  - title: 24 Xury
+    featuredImage: /images/uploads/01.png
+  - title: 25 CHIPY
+    featuredImage: /images/uploads/01.png
+  - title: 26 fumaça95
     featuredImage: /images/uploads/02.png
-  - title: 27 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 28 Líder
-    featuredImage: /images/uploads/lider1.png
-  - title: 29 Jogador
+  - title: 27 Dimitru
+    featuredImage: /images/uploads/01.png
+  - title: 28 Racer59181
+    featuredImage: /images/uploads/01.png
+  - title: 29 KKFM4
     featuredImage: /images/uploads/02.png
-  - title: 30 Jogador
+  - title: 30 El Cucos
     featuredImage: /images/uploads/02.png
-  - title: 31 Jogador
+  - title: 31 JonhyRambo
     featuredImage: /images/uploads/02.png
-  - title: 32 Jogador
+  - title: 32 Eunicio
     featuredImage: /images/uploads/02.png
-  - title: 33 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 34 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 35 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 36 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 37 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 38 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 39 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 40 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 41 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 42 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 43 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 44 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 45 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 46 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 47 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 48 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 49 Jogador
-    featuredImage: /images/uploads/humm.png
-  - title: 50 Jogador
+  - title: 33 Kinggmgo
+    featuredImage: /images/uploads/01.png
+  - title: 34 B.M2
+    featuredImage: /images/uploads/01.png
+  - title: 35 Ervas
+    featuredImage: /images/uploads/01.png
+  - title: 36 Malico3
+    featuredImage: /images/uploads/01.png
+  - title: 37 Malico2
     featuredImage: /images/uploads/01.png
