--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -80,7 +80,7 @@ profile:
   - title: 40 SN Rodrigo
     featuredImage: /images/uploads/01.png
   - title: 41 PT Biclas
-    featuredImage: /images/uploads/biclas.png
+    featuredImage: /images/uploads/webmaster.png
   - title: 42 SN Diego
     featuredImage: /images/uploads/01.png
   - title: 43 PT SimaoSpeed
