Update SN&PT “profile”

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -1,97 +1,97 @@
 profile:
-  - title: 1 SN Carlos
+  - title: 1. SN Carlos
     featuredImage: /images/uploads/01.png
   - featuredImage: /images/uploads/01.png
-    title: 2 PT Blaze
+    title: 2. PT Blaze
   - featuredImage: /images/uploads/02.png
-    title: 3 PT Antrax
-  - title: 4 VittorioGPYT
+    title: 3. PT Antrax
+  - title: 4. VittorioGPYT
     featuredImage: /images/uploads/01.png
-  - title: 5 Sn Murdock
+  - title: 5. Sn Murdock
     featuredImage: /images/uploads/01.png
-  - title: 6 PT Mike
+  - title: 6. PT Mike
     featuredImage: /images/uploads/02.png
-  - title: 7 PT Reforma
+  - title: 7. PT Reforma
     featuredImage: /images/uploads/reforma.png
-  - title: 8 PT RR
+  - title: 8. PT RR
     featuredImage: /images/uploads/01.png
-  - title: 9 PT Kazaka
+  - title: 9. PT Kazaka
     featuredImage: /images/uploads/02.png
-  - title: 10 SN MLOPES
+  - title: 10. SN MLOPES
     featuredImage: /images/uploads/01.png
-  - title: 11 PT Maximus®
+  - title: 11. PT Maximus®
     featuredImage: /images/uploads/01.png
-  - title: 12 SN ALLAN
+  - title: 12. SN ALLAN
     featuredImage: /images/uploads/01.png
-  - title: 13 SN TELL
+  - title: 13. SN TELL
     featuredImage: /images/uploads/01.png
-  - title: 14 PT Mykarr
+  - title: 14. PT Mykarr
     featuredImage: /images/uploads/01.png
-  - title: 15 SN Guijona
+  - title: 15. SN Guijona
     featuredImage: /images/uploads/02.png
-  - title: 16 SN CHINA
+  - title: 16. SN CHINA
     featuredImage: /images/uploads/01.png
-  - title: 17 PT Titana
+  - title: 17. PT Titana
     featuredImage: /images/uploads/01.png
-  - title: 18 SN Klauck
+  - title: 18. SN Klauck
     featuredImage: /images/uploads/01.png
-  - title: 19 SN Irenno
+  - title: 19. SN Irenno
     featuredImage: /images/uploads/01.png
-  - title: 20 PT M@risa
+  - title: 20. PT M@risa
     featuredImage: /images/uploads/01.png
-  - title: 21 SN ACQUA
+  - title: 21. SN ACQUA
     featuredImage: /images/uploads/01.png
-  - title: 22 SN AS
+  - title: 22. SN AS
     featuredImage: /images/uploads/01.png
-  - title: 23 SN Ander
+  - title: 23. SN Ander
     featuredImage: /images/uploads/01.png
-  - title: 24 SN Betinho
+  - title: 24. SN Betinho
     featuredImage: /images/uploads/01.png
-  - title: 25 SN Marcelo
+  - title: 25. SN Marcelo
     featuredImage: /images/uploads/01.png
-  - title: 26 SN Biil
+  - title: 26. SN Biil
     featuredImage: /images/uploads/02.png
-  - title: 27 Samuka
+  - title: 27. Samuka
     featuredImage: /images/uploads/01.png
-  - title: 28 PT Jezandapuss
+  - title: 28. PT Jezandapuss
     featuredImage: /images/uploads/01.png
-  - title: 29 PT N8N
+  - title: 29. PT N8N
     featuredImage: /images/uploads/02.png
-  - title: 30 SN LukBagart
+  - title: 30. SN LukBagart
     featuredImage: /images/uploads/02.png
-  - title: 31 PT FT1
+  - title: 31. PT FT1
     featuredImage: /images/uploads/02.png
-  - title: 32 Kauan(WG)
+  - title: 32. Kauan(WG)
     featuredImage: /images/uploads/02.png
-  - title: 33 SN Sieg
+  - title: 33. SN Sieg
     featuredImage: /images/uploads/01.png
-  - title: 34 PT BM®
+  - title: 34. PT BM®
     featuredImage: /images/uploads/01.png
-  - title: 35 SN Júlio
+  - title: 35. SN Júlio
     featuredImage: /images/uploads/01.png
-  - title: 36 HAN SOLO
+  - title: 36. HAN SOLO
     featuredImage: /images/uploads/01.png
-  - title: 37 PT Zeto
+  - title: 37. PT Zeto
     featuredImage: /images/uploads/01.png
-  - title: 38 PT Pedro
+  - title: 38. PT Pedro
     featuredImage: /images/uploads/01.png
-  - title: 39 PT MrWeed
+  - title: 39. PT MrWeed
     featuredImage: /images/uploads/01.png
-  - title: 40 SN Rodrigo
+  - title: 40. SN Rodrigo
     featuredImage: /images/uploads/01.png
-  - title: 41 PT Biclas
+  - title: 41. PT Biclas
     featuredImage: /images/uploads/webmaster.png
-  - title: 42 SN Diego
+  - title: 42. SN Diego
     featuredImage: /images/uploads/01.png
-  - title: 43 PT SimaoSpeed
+  - title: 43. PT SimaoSpeed
     featuredImage: /images/uploads/01.png
-  - title: 44 RS kingito
+  - title: 44. RS kingito
     featuredImage: /images/uploads/01.png
-  - title: 45 PT Papuça
+  - title: 45. PT Papuça
     featuredImage: /images/uploads/01.png
-  - title: 46 SN A.S.A.
+  - title: 46. SN A.S.A.
     featuredImage: /images/uploads/01.png
-  - title: 47 PT Pat1tuh
+  - title: 47. PT Pat1tuh
     featuredImage: /images/uploads/01.png
-  - title: 48 mivacotwitch
+  - title: 48. mivacotwitch
     featuredImage: /images/uploads/01.png
