Update Portugal I “profilepti”

--- a/_data/pti.yaml
+++ b/_data/pti.yaml
@@ -1,99 +1,99 @@
 profilepti:
-  - title: 1 Casanova
+  - title: 1. Casanova
     featuredImage: /images/uploads/01.png
   - featuredImage: /images/uploads/01.png
-    title: 2 A. Santos
+    title: 2. A. Santos
   - featuredImage: /images/uploads/liderequipa.png
-    title: 3 Taranto
-  - title: 4 SlashJr™
+    title: 3. Taranto
+  - title: 4. SlashJr™
     featuredImage: /images/uploads/01.png
-  - title: 5 AlcobiaV
+  - title: 5. AlcobiaV
     featuredImage: /images/uploads/01.png
-  - title: 6 RS|M4ster
+  - title: 6. RS|M4ster
     featuredImage: /images/uploads/02.png
-  - title: 7 Mykarr2
+  - title: 7. Mykarr2
     featuredImage: /images/uploads/02.png
-  - title: 8 BMW
+  - title: 8. BMW
     featuredImage: /images/uploads/01.png
-  - title: 9 Malico
+  - title: 9. Malico
     featuredImage: /images/uploads/02.png
-  - title: 10 ZaMaNoO
+  - title: 10. ZaMaNoO
     featuredImage: /images/uploads/01.png
-  - title: 11 Dvalin
+  - title: 11. Dvalin
     featuredImage: /images/uploads/01.png
-  - title: 12 Joselito
+  - title: 12. Joselito
     featuredImage: /images/uploads/01.png
-  - title: 13 Bruno
+  - title: 13. Bruno
     featuredImage: /images/uploads/01.png
-  - title: 14 Rafa­­™$
+  - title: 14. Rafa­­™$
     featuredImage: /images/uploads/01.png
-  - title: 15 Hugo
+  - title: 15. Hugo
     featuredImage: /images/uploads/02.png
-  - title: 16 PR LelouchYT
+  - title: 16. PR LelouchYT
     featuredImage: /images/uploads/01.png
-  - title: 17 Jorge
+  - title: 17. Jorge
     featuredImage: /images/uploads/01.png
-  - title: 18 Shisui
+  - title: 18. Shisui
     featuredImage: /images/uploads/01.png
-  - title: 19 Freddy
+  - title: 19. Freddy
     featuredImage: /images/uploads/01.png
-  - title: 20 Canada
+  - title: 20. Canada
     featuredImage: /images/uploads/01.png
-  - title: 21 nugget
+  - title: 21. nugget
     featuredImage: /images/uploads/01.png
-  - title: 22 TZ
+  - title: 22. TZ
     featuredImage: /images/uploads/01.png
-  - title: 23 SRT
+  - title: 23. SRT
     featuredImage: /images/uploads/01.png
-  - title: 24 ric123
+  - title: 24. ric123
     featuredImage: /images/uploads/01.png
-  - title: 25 Sargento HS
+  - title: 25. Sargento HS
     featuredImage: /images/uploads/01.png
-  - title: 26 Majo
+  - title: 26. Majo
     featuredImage: /images/uploads/02.png
-  - title: 27 FrankW
+  - title: 27. FrankW
     featuredImage: /images/uploads/01.png
-  - title: 28 Farinhol
+  - title: 28. Farinhol
     featuredImage: /images/uploads/01.png
-  - title: 29 Srbebado
+  - title: 29. Srbebado
     featuredImage: /images/uploads/02.png
-  - title: 30 Raio®
+  - title: 30. Raio®
     featuredImage: /images/uploads/liderequipa.png
-  - title: 31 Ricardo
+  - title: 31. Ricardo
     featuredImage: /images/uploads/01.png
-  - title: 32 pmGoPro
+  - title: 32. pmGoPro
     featuredImage: /images/uploads/02.png
-  - title: 33 Kharthoum
+  - title: 33. Kharthoum
     featuredImage: /images/uploads/01.png
-  - title: 34 DaniDias
+  - title: 34. DaniDias
     featuredImage: /images/uploads/01.png
-  - title: 35 420
+  - title: 35. 420
     featuredImage: /images/uploads/01.png
-  - title: 36 JoniOne
+  - title: 36. JoniOne
     featuredImage: /images/uploads/01.png
-  - title: 37 Saraivix
+  - title: 37. Saraivix
     featuredImage: /images/uploads/01.png
-  - title: 38 JDias
+  - title: 38. JDias
     featuredImage: /images/uploads/01.png
-  - title: 39 Edgar
+  - title: 39. Edgar
     featuredImage: /images/uploads/01.png
-  - title: 40 RDU
+  - title: 40. RDU
     featuredImage: /images/uploads/01.png
-  - title: 41 Peter Pan
+  - title: 41. Peter Pan
     featuredImage: /images/uploads/liderequipa.png
-  - title: 42 Lourinhã
+  - title: 42. Lourinhã
     featuredImage: /images/uploads/01.png
-  - title: 43 Bob (W33D)
+  - title: 43. Bob (W33D)
     featuredImage: /images/uploads/01.png
-  - title: 44 Daniel
+  - title: 44. Daniel
     featuredImage: /images/uploads/01.png
-  - title: 45 Pull
+  - title: 45. Pull
     featuredImage: /images/uploads/01.png
-  - title: 46 Marcio_AZR
+  - title: 46. Marcio_AZR
     featuredImage: /images/uploads/01.png
-  - title: 47 Viet24 (André)
+  - title: 47. Viet24 (André)
     featuredImage: /images/uploads/01.png
-  - title: 48 SB|Top(4)
+  - title: 48. SB|Top(4)
     featuredImage: /images/uploads/01.png
-  - title: 49 !GnI$
+  - title: 49. !GnI$
     featuredImage: /images/uploads/01.png
