--- a/_data/ptiii.yaml
+++ b/_data/ptiii.yaml
@@ -1,91 +1,91 @@
 profileptiii:
-  - title: 1 Ladybug­®
+  - title: 1. Ladybug­®
     featuredImage: /images/uploads/liderequipa.png
   - featuredImage: /images/uploads/01.png
-    title: 2 Nivaldo 2
+    title: 2. Nivaldo 2
   - featuredImage: /images/uploads/liderequipa.png
-    title: 3 Sousa
-  - title: 4 Gaspar
+    title: 3. Sousa
+  - title: 4. Gaspar
     featuredImage: /images/uploads/liderequipa.png
-  - title: 5 Rokatanky
+  - title: 5. Rokatanky
     featuredImage: /images/uploads/01.png
-  - title: 6 PintoMaster
+  - title: 6. PintoMaster
     featuredImage: /images/uploads/liderequipa.png
-  - title: 7 Tomates
+  - title: 7. Tomates
     featuredImage: /images/uploads/02.png
-  - title: 8 Nox
+  - title: 8. Nox
     featuredImage: /images/uploads/liderequipa.png
-  - title: 9 Zecadiabo
+  - title: 9. Zecadiabo
     featuredImage: /images/uploads/02.png
-  - title: 10 Tiogui
+  - title: 10. Tiogui
     featuredImage: /images/uploads/01.png
-  - title: 11 XiKo
+  - title: 11. XiKo
     featuredImage: /images/uploads/liderequipa.png
-  - title: 12 Infinit0
+  - title: 12. Infinit0
     featuredImage: /images/uploads/liderequipa.png
-  - title: 13 DSMB9604
+  - title: 13. DSMB9604
     featuredImage: /images/uploads/01.png
-  - title: 14 Luís
+  - title: 14. Luís
     featuredImage: /images/uploads/01.png
-  - title: 15 Fumar­®
+  - title: 15. Fumar­®
     featuredImage: /images/uploads/02.png
-  - title: 16 martins
+  - title: 16. martins
     featuredImage: /images/uploads/01.png
-  - title: 17 ProDanii
+  - title: 17. ProDanii
     featuredImage: /images/uploads/liderequipa.png
-  - title: 18 (arabe)
+  - title: 18. (arabe)
     featuredImage: /images/uploads/01.png
-  - title: 19 Thecoin78
+  - title: 19. Thecoin78
     featuredImage: /images/uploads/01.png
-  - title: 20 44ron
+  - title: 20. 44ron
     featuredImage: /images/uploads/01.png
-  - title: 21 T.Gil
+  - title: 21. T.Gil
     featuredImage: /images/uploads/01.png
-  - title: 22 Ricardo
+  - title: 22. Ricardo
     featuredImage: /images/uploads/01.png
-  - title: 23 Rio!
+  - title: 23. Rio!
     featuredImage: /images/uploads/01.png
-  - title: 24 Ragnar
+  - title: 24. Ragnar
     featuredImage: /images/uploads/01.png
-  - title: 25 Jota
+  - title: 25. Jota
     featuredImage: /images/uploads/01.png
-  - title: 26 Maluco
+  - title: 26. Maluco
     featuredImage: /images/uploads/02.png
-  - title: 27 Tiromeco21
+  - title: 27. Tiromeco21
     featuredImage: /images/uploads/01.png
-  - title: 28 Biden
+  - title: 28. Biden
     featuredImage: /images/uploads/01.png
-  - title: 29 Lpvox
+  - title: 29. Lpvox
     featuredImage: /images/uploads/02.png
-  - title: 30 Rodr$go
+  - title: 30. Rodr$go
     featuredImage: /images/uploads/02.png
-  - title: 31 filintofelix
+  - title: 31. filintofelix
     featuredImage: /images/uploads/02.png
-  - title: 32 Pedro­™
+  - title: 32. Pedro­™
     featuredImage: /images/uploads/02.png
-  - title: 33 guimm707
+  - title: 33. guimm707
     featuredImage: /images/uploads/01.png
-  - title: 34 vitor
+  - title: 34. vitor
     featuredImage: /images/uploads/01.png
-  - title: 35 NeoRazor
+  - title: 35. NeoRazor
     featuredImage: /images/uploads/01.png
-  - title: 36 vagabundo
+  - title: 36. vagabundo
     featuredImage: /images/uploads/01.png
-  - title: 37 Sabynovsky
+  - title: 37. Sabynovsky
     featuredImage: /images/uploads/01.png
-  - title: 38 Diluc
+  - title: 38. Diluc
     featuredImage: /images/uploads/01.png
-  - title: 39 tiburcio_pre
+  - title: 39. tiburcio_pre
     featuredImage: /images/uploads/01.png
-  - title: 40 Chill Kid
+  - title: 40. Chill Kid
     featuredImage: /images/uploads/01.png
-  - title: 41 martim
+  - title: 41. martim
     featuredImage: /images/uploads/01.png
-  - title: 42 ThefristLino
+  - title: 42. ThefristLino
     featuredImage: /images/uploads/01.png
-  - title: 43 Caminhudo
+  - title: 43. Caminhudo
     featuredImage: /images/uploads/01.png
-  - title: 44 Simion
+  - title: 44. Simion
     featuredImage: /images/uploads/01.png
-  - title: 45 pissa
+  - title: 45. pissa
     featuredImage: /images/uploads/01.png
