Update Academia “profileacademia”

--- a/_data/academia.yaml
+++ b/_data/academia.yaml
@@ -1,75 +1,75 @@
 profileacademia:
-  - title: 1 Kaos
+  - title: 1. Kaos
     featuredImage: /images/uploads/01.png
   - featuredImage: /images/uploads/01.png
-    title: 2 loc
+    title: 2. loc
   - featuredImage: /images/uploads/01.png
-    title: 3 Driver
-  - title: 4 Dany05
+    title: 3. Driver
+  - title: 4. Dany05
     featuredImage: /images/uploads/01.png
-  - title: 5 Nunex
+  - title: 5. Nunex
     featuredImage: /images/uploads/01.png
-  - title: 6 Pacheco
+  - title: 6. Pacheco
     featuredImage: /images/uploads/02.png
-  - title: 7 Jok€r 78
+  - title: 7. Jok€r 78
     featuredImage: /images/uploads/02.png
-  - title: 8 Shini
+  - title: 8. Shini
     featuredImage: /images/uploads/01.png
-  - title: 9 Joao P
+  - title: 9. Joao P
     featuredImage: /images/uploads/02.png
-  - title: 10 Strato156
+  - title: 10. Strato156
     featuredImage: /images/uploads/01.png
-  - title: 11 Ray 2
+  - title: 11. Ray 2
     featuredImage: /images/uploads/liderequipa.png
-  - title: 12 tl
+  - title: 12. tl
     featuredImage: /images/uploads/01.png
-  - title: 13 Danielpac
+  - title: 13. Danielpac
     featuredImage: /images/uploads/01.png
-  - title: 14 Kakashi
+  - title: 14. Kakashi
     featuredImage: /images/uploads/01.png
-  - title: 15 JarJar Binks
+  - title: 15. JarJar Binks
     featuredImage: /images/uploads/liderequipa.png
-  - title: 16 Styleish
+  - title: 16. Styleish
     featuredImage: /images/uploads/01.png
-  - title: 17 Akumajunior
+  - title: 17. Akumajunior
     featuredImage: /images/uploads/01.png
-  - title: 18 Rodas1904
+  - title: 18. Rodas1904
     featuredImage: /images/uploads/01.png
-  - title: 19 Pimbas
+  - title: 19. Pimbas
     featuredImage: /images/uploads/01.png
-  - title: 20 Zé
+  - title: 20. Zé
     featuredImage: /images/uploads/01.png
-  - title: 21 Nunm4x
+  - title: 21. Nunm4x
     featuredImage: /images/uploads/01.png
-  - title: 22 EvilSatan666
+  - title: 22. EvilSatan666
     featuredImage: /images/uploads/01.png
-  - title: 23 Diogo_XY7
+  - title: 23. Diogo_XY7
     featuredImage: /images/uploads/01.png
-  - title: 24 Xury
+  - title: 24. Xury
     featuredImage: /images/uploads/01.png
-  - title: 25 CHIPY
+  - title: 25. CHIPY
     featuredImage: /images/uploads/01.png
-  - title: 26 fumaça95
+  - title: 26. fumaça95
     featuredImage: /images/uploads/02.png
-  - title: 27 Dimitru
+  - title: 27. Dimitru
     featuredImage: /images/uploads/01.png
-  - title: 28 Racer59181
+  - title: 28. Racer59181
     featuredImage: /images/uploads/01.png
-  - title: 29 KKFM4
+  - title: 29. KKFM4
     featuredImage: /images/uploads/02.png
-  - title: 30 El Cucos
+  - title: 30. El Cucos
     featuredImage: /images/uploads/02.png
-  - title: 31 JonhyRambo
+  - title: 31. JonhyRambo
     featuredImage: /images/uploads/02.png
-  - title: 32 Eunicio
+  - title: 32. Eunicio
     featuredImage: /images/uploads/02.png
-  - title: 33 Kinggmgo
+  - title: 33. Kinggmgo
     featuredImage: /images/uploads/01.png
-  - title: 34 B.M2
+  - title: 34. B.M2
     featuredImage: /images/uploads/01.png
-  - title: 35 Ervas
+  - title: 35. Ervas
     featuredImage: /images/uploads/01.png
-  - title: 36 Malico3
+  - title: 36. Malico3
     featuredImage: /images/uploads/01.png
-  - title: 37 Malico2
+  - title: 37. Malico2
     featuredImage: /images/uploads/01.png
