--- a/_data/pti.yaml
+++ b/_data/pti.yaml
@@ -3,7 +3,7 @@ profilepti:
     featuredImage: /images/uploads/01.png
   - featuredImage: /images/uploads/01.png
     title: 2. A. Santos
-  - featuredImage: /images/uploads/liderequipa.png
+  - featuredImage: /images/uploads/taranto.png
     title: 3. Taranto
   - title: 4. SlashJr™
     featuredImage: /images/uploads/01.png
