--- a/_data/ptiii.yaml
+++ b/_data/ptiii.yaml
@@ -1,6 +1,6 @@
 profileptiii:
   - title: 1. Ladybug­®
-    featuredImage: /images/uploads/liderequipa.png
+    featuredImage: /images/uploads/Ladybug.png
   - featuredImage: /images/uploads/01.png
     title: 2. Nivaldo 2
   - featuredImage: /images/uploads/liderequipa.png
@@ -22,7 +22,7 @@ profileptiii:
   - title: 11. XiKo
     featuredImage: /images/uploads/liderequipa.png
   - title: 12. Infinit0
-    featuredImage: /images/uploads/liderequipa.png
+    featuredImage: /images/uploads/01.png
   - title: 13. DSMB9604
     featuredImage: /images/uploads/01.png
   - title: 14. Luís
