--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -3,7 +3,7 @@ profile:
     featuredImage: /images/uploads/01.png
   - featuredImage: /images/uploads/01.png
     title: 2. PT Blaze
-  - featuredImage: /images/uploads/antrax.png
+  - featuredImage: /images/uploads/antrax1.png
     title: 3. PT Antrax
   - title: 4. VittorioGPYT
     featuredImage: /images/uploads/01.png
