--- a/_data/academia.yaml
+++ b/_data/academia.yaml
@@ -1,75 +1,112 @@
 profileacademia:
   - title: 1. Kaos
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
     title: 2. loc
   - featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
     title: 3. Driver
   - title: 4. Dany05
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 5. Nunex
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 6. Pacheco
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 7. Jok€r 78
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 8. Shini
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 9. Joao P
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 10. Strato156
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 11. Ray 2
     featuredImage: /images/uploads/liderequipa.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 12. tl
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 13. Danielpac
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 14. Kakashi
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 15. JarJar Binks
     featuredImage: /images/uploads/liderequipa.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 16. Styleish
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 17. Akumajunior
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 18. Rodas1904
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 19. Pimbas
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 20. Zé
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 21. Nunm4x
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 22. EvilSatan666
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 23. Diogo_XY7
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 24. Xury
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 25. CHIPY
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 26. fumaça95
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 27. Dimitru
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 28. Racer59181
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 29. KKFM4
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 30. El Cucos
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 31. JonhyRambo
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 32. Eunicio
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 33. Kinggmgo
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 34. B.M2
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 35. Ervas
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 36. Malico3
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 37. Malico2
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
