--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -1,97 +1,145 @@
 profile:
   - title: 1. SN Carlos
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
     title: 2. PT Blaze
   - featuredImage: /images/uploads/antrax1.png
+    flag: /images/uploads/FlagPortugal.jpg
     title: 3. PT Antrax
   - title: 4. VittorioGPYT
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 5. Sn Murdock
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 6. PT Mike
     featuredImage: /images/uploads/Myke.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 7. PT Reforma
     featuredImage: /images/uploads/slash.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 8. PT RR
     featuredImage: /images/uploads/rr.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 9. PT Kazaka
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 10. SN MLOPES
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 11. PT Maximus®
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 12. SN ALLAN
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 13. SN TELL
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 14. PT Mykarr
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 15. SN Guijona
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 16. SN CHINA
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 17. PT Titana
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 18. SN Klauck
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 19. SN Irenno
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 20. PT M@risa
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 21. SN ACQUA
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 22. SN AS
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 23. SN Ander
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 24. SN Betinho
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 25. SN Marcelo
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 26. SN Biil
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 27. Samuka
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 28. PT Jezandapuss
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 29. PT N8N
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 30. SN LukBagart
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 31. PT FT1
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 32. Kauan(WG)
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 33. SN Sieg
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 34. PT BM®
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 35. SN Júlio
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 36. HAN SOLO
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 37. PT Zeto
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 38. PT Pedro
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 39. PT MrWeed
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 40. SN Rodrigo
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 41. PT Biclas
     featuredImage: /images/uploads/web-master.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 42. SN Diego
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 43. PT SimaoSpeed
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 44. RS kingito
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 45. PT Papuça
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 46. SN A.S.A.
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 47. PT Pat1tuh
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 48. mivacotwitch
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
